// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frontmatter: Default frontmatter should render default YAML block' 1`] = `
"---
title: "typedoc-plugin-markdown"
---"
`;

exports[`Frontmatter: With options should render YAML block with options' 1`] = `
"---
title: "typedoc-plugin-markdown"
author: "Joe Bloggs"
description: "Some description used in frontmatter"
navOrder: 1
globalA: "globalA"
globalB: 2
globalC: null
---"
`;

exports[`Frontmatter: should render YAML block with pascalCase' 1`] = `
"---
Title: "typedoc-plugin-markdown"
NavOrder: 1
---"
`;

exports[`Frontmatter: should render YAML block with snakeCase' 1`] = `
"---
title: "typedoc-plugin-markdown"
nav_order: 1
---"
`;
